--- a/main.html
+++ b/main.html
@@ -9,36 +9,314 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/jquery.fancybox.min.css" />
+    <link rel="stylesheet" href="./css/swipebox.min.css" />
     <link rel="stylesheet" href="./css/slick.css" />
     <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 </head>
+
 
 <body>
     <!-- wrap -->
     <div class="wrap">
 
-
-        <!-- header -->
-        <header class="header">
+        <!--main-top-box-->
+        <div class="main-top-box cnt-section">
             <div class="inner-wrap">
-                44444
+                <div class="box-inner-wrap">
+                    <div class="elm-photo photo-cover">
+                        <img src="./img/main.jpg" alt="">
+                    </div>
+                    <h1 class="h1-title">VIJU «Добрый дом» — онлайн-трансляция как живут дети в добром доме и как мы им помогаем</h1>
+                    <div class="logo-wrap">
+                        <div class="logo">
+                            <img src="./img/logo-top.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="btn-action-ico ico-arrow ico-arrow-down"></div>
+                </div>
             </div>
-        </header>
-        <!-- /header -->
-
-        <!-- page -->
-        <div class="page">
-            2222
         </div>
-        <!-- /page -->
+        <!--/main-top-box-->
+
+        <!--main-info-box-->
+        <div class="main-info-box cnt-section">
+            <div class="inner-wrap">
+                <div class="box-inner-wrap">
+                    <div class="photo-inner-wrap">
+                        <div class="logo-wrap">
+                            <div class="logo">
+                                <img src="./img/logo-inner.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="elm-photo">
+                            <img src="./img/01.png" alt="">
+                        </div>
+                    </div>
+                    <div class="info-inner-wrap">
+                        <h2 class="h2-title">Как VIJU помогает онкобольным детям</h2>
+                        <div class="info-wrap">
+                            <div class="elm-photo photo-cover">
+                                <img src="./img/02.jpg" alt="">
+                            </div>
+                            <div class="info-text-wrap">
+                                <ol>
+                                    <li>Мы разработали и внедряем систему умный дом, которая будет экономить электричество, управлять светом и создавать комфорт</li>
+                                    <li>Мы им привезли холодильники торговые, хх шт и дети будут хранить свежие овощи</li>
+                                    <li>Мы завезли 20 камазов чернозема тут тоже фото</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/main-info-box-->
+
+        <!--main-tiles-box-->
+        <div class="main-tiles-box cnt-section">
+            <div class="inner-wrap">
+                <div class="box-inner-wrap">
+                    <h2 class="h2-title">Как живут в «Добром доме» наши детки и их семьи</h2>
+                    <div class="items-inner-wrap">
+                        <div class="items-wrap">
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-main">
+                                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube01" class="tile-link" title="Актовый зал (камера 1)"></a>
+                                    <img src="./img/001.jpg" alt="" class="img-bg-cover">
+                                    <div class="tile-info-wrap">
+                                        <a href="" class="btn-action-ico ico-play-border"></a>
+                                        <div class="tile-title">Актовый зал <span class="tile-title-light">(камера 1)</span></div>
+                                        <div class="tile-text">Здесь дети и их семьи могут принимать участие в различных ивентах, мастер-классах</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-main">
+                                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube02" class="tile-link" title="Столовая  (камера 2)"></a>
+                                    <img src="./img/002.jpg" alt="" class="img-bg-cover">
+                                    <div class="tile-info-wrap">
+                                        <a href="" class="btn-action-ico ico-play-border"></a>
+                                        <div class="tile-title">Столовая <span class="tile-title-light">(камера 2)</span></div>
+                                        <div class="tile-text">Мы стараемся предоставить детям и их семьям самое лучшее и сбалансированное питание</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-main">
+                                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube03" class="tile-link" title="Комната отдыха  (камера 3)"></a>
+                                    <img src="./img/003.jpg" alt="" class="img-bg-cover">
+                                    <div class="tile-info-wrap">
+                                        <a href="" class="btn-action-ico ico-play-border"></a>
+                                        <div class="tile-title">Комната отдыха <span class="tile-title-light">(камера 3)</span></div>
+                                        <div class="tile-text">Комната, в которой наши юные жильцы и их родители могут расслабиться и отдохнуть, играя в различные игры</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-main">
+                                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube04" class="tile-link" title="Спортивная площадка  (камера 4)"></a>
+                                    <img src="./img/004.jpg" alt="" class="img-bg-cover">
+                                    <div class="tile-info-wrap">
+                                        <a href="" class="btn-action-ico ico-play-border"></a>
+                                        <div class="tile-title">Спортивная площадка <span class="tile-title-light">(камера 4)</span></div>
+                                        <div class="tile-text">На площадке детки и их родители могут заниматься контактными видами спорта</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-main">
+                                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube05" class="tile-link" title="Кладовая  (камера 5)"></a>
+                                    <img src="./img/005.jpg" alt="" class="img-bg-cover">
+                                    <div class="tile-info-wrap">
+                                        <a href="" class="btn-action-ico ico-play-border"></a>
+                                        <div class="tile-title">Кладовая <span class="tile-title-light">(камера 5)</span></div>
+                                        <div class="tile-text">Комната, в которой наши юные жильцы и их родители могут расслабиться и отдохнуть, играя в различные игры</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                            <!--item wrap-->
+                            <div class="item-wrap">
+                                <div class="item-tile-main">
+                                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube06" class="tile-link" title="Комната отдыха 2  (камера 6)"></a>
+                                    <img src="./img/006.jpg" alt="" class="img-bg-cover">
+                                    <div class="tile-info-wrap">
+                                        <a href="" class="btn-action-ico ico-play-border"></a>
+                                        <div class="tile-title">Комната отдыха 2 <span class="tile-title-light">(камера 6)</span></div>
+                                        <div class="tile-text">На площадке детки и их родители могут заниматься контактными видами спорта</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--/item wrap-->
+                        </div>
+                    </div>
+                    <div class="more-wrap">
+                        <a href="" class="btn">Показать еще камеры</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/main-tiles-box-->
+
+        <!--main-help-box-->
+        <div class="main-help-box cnt-section">
+            <div class="inner-wrap">
+                <div class="box-inner-wrap">
+                    <div class="box-outer-wrap">
+                        <div class="info-inner-wrap">
+                            <h2 class="h1-title">Как помочь детям в&nbsp;борьбе с&nbsp;болезнью?</h2>
+                            <div class="text-lead">
+                                <p>Чтобы помочь больному ребёнку, отправьте <b>SMS</b> на номер <b>3434</b> с текстом <b>ДОМ 500</b>, где «500» — сумма в рублях (может быть любой от 10 до 15000).</p>
+                            </div>
+                            <p>Оформите подписку и помогайте детям ежемесячно, сумма ежемесячных пожертвований может быть любой и будет списываться автоматически.</p>
+                            <a href="" class="btn button-att">Помочь прямо сейчас</a>
+                        </div>
+                        <div class="photo-inner-wrap">
+                            <div class="elm-photo">
+                                <img src="./img/screen.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/main-help-box-->
+
+        <!--main-partners-box-->
+        <div class="main-partners-box cnt-section">
+            <div class="inner-wrap">
+                <div class="box-inner-wrap">
+                    <h2 class="h2-title">Наши друзья и партнеры</h2>
+                    <div class="slider-wrap">
+                        <div class="slider">
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo01.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo02.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo03.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo04.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo01.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo02.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo03.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo04.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo01.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo02.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo03.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="sl-wrap">
+                                <div class="item-tile-logo">
+                                    <img src="./img/logo04.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/main-partners-box-->
+
+        <!--main-about-box-->
+        <div class="main-about-box cnt-section">
+            <div class="inner-wrap">
+                <div class="box-inner-wrap">
+                    <a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube" class="photo-inner-wrap" title="Актовый зал (камера 1)">
+                        <div class="elm-photo photo-cover">
+                            <img src="./img/video.jpg" alt="">
+                            <div class="btn-action-ico ico-play"></div>
+                        </div>
+                    </a>
+                    <div class="info-inner-wrap">
+                        <h2 class="h2-title">Работа системы VIJU на строительных объектах</h2>
+                        <p>Наши системы видеонаблюдения на строительной площадке застройщика «Самолёт». Работа башенного крана на одном из объектов</p>
+                        <div class="logo">
+                            <img src="./img/logo-bottom.svg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/main-about-box-->
 
 
         <!-- footer -->
         <footer class="footer">
             <div class="inner-wrap">
-                333333
+                <div class="box-inner-wrap">
+                    <div class="copy-wrap">2023. Все права защищены</div>
+                    <div class="soc-wrap">
+                        <a href="" class="btn-soc">
+                            <span class="button-ico">
+                                <img src="./img/icons/tg.svg" alt="">
+                            </span>
+                            <span class="button-title">Напишите нам в&nbsp;Telegram</span>
+                        </a>
+                    </div>
+                    <div class="studio-wrap">
+                        Проект работает на <a href="" class="link-main">системе&nbsp;Viju</a>
+                        <div class="logo">
+                            <img src="./img/logo-footer.svg" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
         <!-- /footer -->
@@ -47,9 +325,8 @@
     <!-- /wrap -->
 
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/jquery.fancybox.min.js"></script>
     <script src="./js/slick.min.js"></script>
-    <script src="./js/jquery.maskedinput.min.js"></script>
+    <script src="./js/jquery.swipebox.min.js"></script>
     <script src="./js/scripts.js"></script>
 
 </body>
