--- a/_html/main.html
+++ b/_html/main.html
@@ -42,14 +42,30 @@
 						<div class="info-inner-wrap">
 							<h2 class="h2-title">Как VIJU помогает онкобольным детям</h2>
 							<div class="info-wrap">
-								<div class="elm-photo photo-cover">
-									<img src="./img/02.jpg" alt="">
+								<div class="slider-wrap">
+									<div class="slider">
+										<div class="sl-wrap">
+											<div class="elm-photo photo-cover">
+												<img src="./img/02.jpg" alt="">
+											</div>
+										</div>
+										<div class="sl-wrap">
+											<div class="elm-photo photo-cover">
+												<img src="./img/02.jpg" alt="">
+											</div>
+										</div>
+										<div class="sl-wrap">
+											<div class="elm-photo photo-cover">
+												<img src="./img/02.jpg" alt="">
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="info-text-wrap">
 									<ol>
-										<li>Мы разработали и внедряем систему умный дом, которая будет экономить электричество, управлять светом и создавать комфорт</li>
-										<li>Мы им привезли холодильники торговые, хх шт и дети будут хранить свежие овощи</li>
-										<li>Мы завезли 20 камазов чернозема тут тоже фото</li>
+										<li data-slide="0">Мы разработали и внедряем систему умный дом, которая будет экономить электричество, управлять светом и создавать комфорт</li>
+										<li data-slide="1">Мы им привезли холодильники торговые, хх шт и дети будут хранить свежие овощи</li>
+										<li data-slide="2">Мы завезли 20 камазов чернозема тут тоже фото</li>
 									</ol>
 								</div>
 							</div>
