--- a/_html/main.html
+++ b/_html/main.html
@@ -88,7 +88,7 @@
 										<a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube01" class="tile-link" title="Актовый зал (камера 1)"></a>
 										<img src="./img/001.jpg" alt="" class="img-bg-cover">
 										<div class="tile-info-wrap">
-											<a href="" class="btn-action-ico ico-play-border"></a>
+											<div class="btn-action-ico ico-play-border"></div>
 											<div class="tile-title">Актовый зал <span class="tile-title-light">(камера 1)</span></div>
 											<div class="tile-text">Здесь дети и их семьи могут принимать участие в различных ивентах, мастер-классах</div>
 										</div>
@@ -101,7 +101,7 @@
 										<a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube02" class="tile-link" title="Столовая  (камера 2)"></a>
 										<img src="./img/002.jpg" alt="" class="img-bg-cover">
 										<div class="tile-info-wrap">
-											<a href="" class="btn-action-ico ico-play-border"></a>
+											<div class="btn-action-ico ico-play-border"></div>
 											<div class="tile-title">Столовая  <span class="tile-title-light">(камера 2)</span></div>
 											<div class="tile-text">Мы стараемся предоставить детям и их семьям самое лучшее и сбалансированное питание</div>
 										</div>
@@ -114,7 +114,7 @@
 										<a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube03" class="tile-link" title="Комната отдыха  (камера 3)"></a>
 										<img src="./img/003.jpg" alt="" class="img-bg-cover">
 										<div class="tile-info-wrap">
-											<a href="" class="btn-action-ico ico-play-border"></a>
+											<div class="btn-action-ico ico-play-border"></div>
 											<div class="tile-title">Комната отдыха  <span class="tile-title-light">(камера 3)</span></div>
 											<div class="tile-text">Комната, в которой наши юные жильцы и их родители могут расслабиться и отдохнуть, играя в различные игры</div>
 										</div>
@@ -127,7 +127,7 @@
 										<a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube04" class="tile-link" title="Спортивная площадка  (камера 4)"></a>
 										<img src="./img/004.jpg" alt="" class="img-bg-cover">
 										<div class="tile-info-wrap">
-											<a href="" class="btn-action-ico ico-play-border"></a>
+											<div class="btn-action-ico ico-play-border"></div>
 											<div class="tile-title">Спортивная площадка  <span class="tile-title-light">(камера 4)</span></div>
 											<div class="tile-text">На площадке детки и их родители могут заниматься контактными видами спорта</div>
 										</div>
@@ -140,7 +140,7 @@
 										<a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube05" class="tile-link" title="Кладовая  (камера 5)"></a>
 										<img src="./img/005.jpg" alt="" class="img-bg-cover">
 										<div class="tile-info-wrap">
-											<a href="" class="btn-action-ico ico-play-border"></a>
+											<div class="btn-action-ico ico-play-border"></div>
 											<div class="tile-title">Кладовая  <span class="tile-title-light">(камера 5)</span></div>
 											<div class="tile-text">Комната, в которой наши юные жильцы и их родители могут расслабиться и отдохнуть, играя в различные игры</div>
 										</div>
@@ -153,7 +153,7 @@
 										<a href="https://www.youtube.com/watch?v=jgm58cbu0kw" data-swipebox="video" rel="youtube06" class="tile-link" title="Комната отдыха 2  (камера 6)"></a>
 										<img src="./img/006.jpg" alt="" class="img-bg-cover">
 										<div class="tile-info-wrap">
-											<a href="" class="btn-action-ico ico-play-border"></a>
+											<div class="btn-action-ico ico-play-border"></div>
 											<div class="tile-title">Комната отдыха 2  <span class="tile-title-light">(камера 6)</span></div>
 											<div class="tile-text">На площадке детки и их родители могут заниматься контактными видами спорта</div>
 										</div>
