--- a/main.html
+++ b/main.html
@@ -224,64 +224,64 @@
                     <div class="slider-wrap">
                         <div class="slider">
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo01.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo02.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo03.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo04.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo01.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo02.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo03.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo04.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo01.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo02.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo03.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                             <div class="sl-wrap">
-                                <div class="item-tile-logo">
+                                <a href="" class="item-tile-logo">
                                     <img src="./img/logo04.jpg" alt="">
-                                </div>
+                                </a>
                             </div>
                         </div>
                     </div>
